# repa-fftw

./: README  README.md  repa-fftw.cabal
Data/Array/Repa/: FFTW.hs
examples/: bench.hs  dochead.hs
exec/: bench.hs  test.hs
