Name:                repa-fftw
Version:             3.1.1.1
Synopsis:            Perform fft with repa via FFTW
License:             BSD3
License-file:        LICENSE
Author:              <8c6794b6@gmail.com>
Maintainer:          <8c6794b6@gmail.com>
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.6

Description:
  Performs FFT on repa array data with fftw.

Extra-source-files:
  examples/bench.hs
  examples/dochead.hs

flag dev
  description:
    Activate developer flags
  default:
    False

Library
  ghc-options:
    -Wall -O2 -fno-warn-orphans

  Exposed-modules:
    Data.Array.Repa.FFTW

  Build-depends:
    base >= 4 && < 5,
    carray >= 0.1.5 && < 0.2,
    fft >= 0.1.5 && < 0.2,
    repa >= 3.1.1 && < 3.2,
    storable-complex >= 0.2

executable bench
   main-is:
    examples/bench.hs

   if flag(dev)
     buildable:
       True
     build-depends:
       criterion >= 0.6,
       deepseq >= 1.3.0 && < 2,
       repa-algorithms >= 3.1,
       random >= 1.0.1.1,
       test-framework >= 0.4,
       test-framework-hunit >= 0.2,
       test-framework-quickcheck2 >= 0.2
     ghc-options:
       -Wall -fno-warn-orphans
       -O2 -threaded -rtsopts
   else
     buildable: False

source-repository head
  type: git
  location: https://github.com/8c6794b6/repa-fftw.git
